--- a/src/ex7_html-css-basics/task-01.html
+++ b/src/ex7_html-css-basics/task-01.html
@@ -35,24 +35,24 @@
 			"
 		></div>
 
-		<table border="1">
+		<table style="width: 400px; border: 2px solid black">
 			<tr>
 				<td></td>
-				<td>Column 1</td>
-				<td>Column 2</td>
-				<td>Column 3</td>
+				<td style="border: 1px solid black">Column 1</td>
+				<td style="border: 1px solid black">Column 2</td>
+				<td style="border: 1px solid black">Column 3</td>
 			</tr>
 			<tr>
-				<td>Row 1</td>
-				<td></td>
-				<td></td>
-				<td></td>
+				<td style="border: 1px solid black">Row 1</td>
+				<td style="border: 1px solid black"></td>
+				<td style="border: 1px solid black"></td>
+				<td style="border: 1px solid black"></td>
 			</tr>
 			<tr>
-				<td>Row 2</td>
-				<td></td>
-				<td></td>
-				<td></td>
+				<td style="border: 1px solid black">Row 2</td>
+				<td style="border: 1px solid black"></td>
+				<td style="border: 1px solid black"></td>
+				<td style="border: 1px solid black"></td>
 			</tr>
 		</table>
 
