--- a/src/ex9_html-css-fundamentals-part2/task-01.html
+++ b/src/ex9_html-css-fundamentals-part2/task-01.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Document</title>
-		<style type="text/css">
+		<style>
 			.image-1 {
 				width: 400px;
 				border-radius: 50%;
