--- a/src/ex10_html-css-advanced/task-01.html
+++ b/src/ex10_html-css-advanced/task-01.html
@@ -8,16 +8,19 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h3>Лоадер для страницы</h3>
 		<div class="tasks">
+			<h3>Лоадер для страницы</h3>
 			<div class="loader">
 				<p class="loading-text">ЗАГРУЗКА</p>
 				<div class="loader-circle"></div>
 			</div>
+			<h3>Прыгающий шар</h3>
 			<div class="jumping-ball">
-				<div class="block1"></div>
-				<div class="block2"></div>
 				<div class="ball"></div>
+				<div class="blocks">
+					<div class="block-child"></div>
+					<div class="block-child"></div>
+				</div>
 			</div>
 		</div>
 	</body>
