--- a/src/ex10_html-css-advanced/task-01.html
+++ b/src/ex10_html-css-advanced/task-01.html
@@ -22,6 +22,8 @@
 					<div class="block-child"></div>
 				</div>
 			</div>
+			<h3>Бесконечная анимация с шагами</h3>
+			<div class="test"></div>
 		</div>
 	</body>
 </html>
