header and footer

--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My library</title>
-</head>
-<body>
-
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="styles.css" />
+		<title>My library</title>
+	</head>
+	<body>
+		<div class="page">
+			<header>
+				<div class="header-nav">
+					<p class="header-nav-help">Help Center</p>
+					<p class="header-nav-support">Our Support</p>
+					<div class="header-nav-user">
+						<img src="./assets/img/avatar/avatar.png" class="header-nav-user-photo"></img>
+						<div class="header-nav-user-name">John Doe</div>
+					</div>
+				</div>
+			</header>
+			<main>
+				<!-- <nav></nav> -->
+			</main>
+			<footer>
+          <div class="question">
+						<img src="./assets/img/icons/question_mark.png" class="question-image"></img>
+					</div>
+          <div class="cogwheel">
+            <img src="./assets/img/icons/cogwheel.png" class="cogwheel-image"></img>
+        </div>
+      </footer>
+		</div>
+		<script src="script.js"></script>
+	</body>
 </html>
