--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -19,8 +19,57 @@
 					</div>
 				</div>
 			</header>
-			<main>
-				<!-- <nav></nav> -->
+			<main class="content">
+					<aside>
+						<div class="addBook">
+							<button class="btn">ADD A BOOK</button>
+						</div>
+						<nav class="nav">
+								<a class="reading" href="#">Now Reading</a>
+								<a class="browse" href="#">Browse</a>
+								<a class="buyBooks" href="#">Buy Books</a>
+								<a class="favoriteBooks" href="#">Favorite Books</a>
+								<a class="wishlist" href="#">Wishlist</a>
+								<a class="history" href="#">History</a>
+						</nav>
+						<div class="hints">
+								<p>Must Read Titles</p>
+								<p>Best Of List</p>
+								<p>Classic Novels</p>
+								<p>Non Fiction</p>
+						</div>
+						<div class="added">
+							<div class="addedSection">
+								<div class="sectionPart">
+									<div class="addedIcon"></div>
+									<p class="addedText">You added <span>Fight Club</span> by <span>Chuck Palaniuk</span> to your <span>Must Read Titles</span> </p>
+								</div>
+								<p class="addedTime">24 minutes ago</p>
+							</div>
+							<div class="addedSection">
+								<div class="sectionPart">
+									<div class="addedIcon"></div>
+									<p class="addedText">You added <span>Fight Club</span> by <span>Chuck Palaniuk</span> to your <span>Must Read Titles</span> </p>
+								</div>
+								<p class="addedTime">24 minutes ago</p>
+							</div>
+						</div>
+					</aside>
+					<section class="books">
+						<div class="booksHeader">
+								<p class="booksHeaderTitle">Browse Available Books</p>
+								<div class="booksNav">
+									<div class="booksNavLinks">
+										<a class="booksNavLink" href="#">All Books</a>
+										<a class="booksNavLink" href="#">Most Recent</a>
+										<a class="booksNavLink" href="#">Most popular</a>
+										<a class="booksNavLink" href="#">Free Books</a>
+									</div>
+									<input class="booksSearchBar" placeholder="Enter Keywords"></input>
+								</div>
+						</div>
+						<div class="booksList"></div>
+					</section>
 			</main>
 			<footer>
           <div class="question">
