--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -15,69 +15,74 @@
 					<p class="header-nav-support">Our Support</p>
 					<div class="header-nav-user">
 						<img src="./assets/img/avatar/avatar.png" class="header-nav-user-photo"></img>
-						<div class="header-nav-user-name">John Doe</div>
+						<div class="header-nav-user-name">Sergey Savelev</div>
 					</div>
 				</div>
 			</header>
 			<main class="content">
 					<aside>
-						<div class="addBook">
+						<div class="add-book">
 							<button class="btn">ADD A BOOK</button>
 						</div>
 						<nav class="nav">
 								<a class="reading" href="#">Now Reading</a>
 								<a class="browse" href="#">Browse</a>
-								<a class="buyBooks" href="#">Buy Books</a>
-								<a class="favoriteBooks" href="#">Favorite Books</a>
+								<a class="buy-books" href="#">Buy Books</a>
+								<a class="favorite-books" href="#">Favorite Books</a>
 								<a class="wishlist" href="#">Wishlist</a>
 								<a class="history" href="#">History</a>
 						</nav>
 						<div class="hints">
-								<p>Must Read Titles</p>
-								<p>Best Of List</p>
-								<p>Classic Novels</p>
-								<p>Non Fiction</p>
+								<a href="#">Must Read Titles</a>
+								<a href="#">Best Of List</a>
+								<a href="#">Classic Novels</a>
+								<a href="#">Non Fiction</a>
 						</div>
 						<div class="added">
-							<div class="addedSection">
-								<div class="sectionPart">
-									<div class="addedIcon"></div>
-									<p class="addedText">You added <span>Fight Club</span> by <span>Chuck Palaniuk</span> to your <span>Must Read Titles</span> </p>
+							<div class="added-section">
+								<div class="section-part">
+									<div class="added-icon"></div>
+									<p class="added-text">You added <span>Fight Club</span> by <span>Chuck Palaniuk</span> to your <span>Must Read Titles</span> </p>
 								</div>
-								<p class="addedTime">24 minutes ago</p>
+								<p class="added-time">24 minutes ago</p>
 							</div>
-							<div class="addedSection">
-								<div class="sectionPart">
-									<div class="addedIcon"></div>
-									<p class="addedText">You added <span>Fight Club</span> by <span>Chuck Palaniuk</span> to your <span>Must Read Titles</span> </p>
+							<div class="added-section">
+								<div class="section-part">
+									<div class="added-icon"></div>
+									<p class="added-text">You added <span>The Trial</span> by <span>Franz Kafka</span> to your <span>Must Read Titles</span> </p>
 								</div>
-								<p class="addedTime">24 minutes ago</p>
+								<p class="added-time">48 minutes ago</p>
 							</div>
 						</div>
 					</aside>
 					<section class="books">
-						<div class="booksHeader">
-								<p class="booksHeaderTitle">Browse Available Books</p>
-								<div class="booksNav">
-									<div class="booksNavLinks">
-										<a class="booksNavLink" href="#">All Books</a>
-										<a class="booksNavLink" href="#">Most Recent</a>
-										<a class="booksNavLink" href="#">Most popular</a>
-										<a class="booksNavLink" href="#">Free Books</a>
+						<div class="books-header">
+								<p class="books-header-title">Browse Available Books</p>
+								<div class="books-nav">
+									<div class="books-nav-links">
+										<a class="books-nav-link" href="#">All Books</a>
+										<a class="books-nav-link" href="#">Most Recent</a>
+										<a class="books-nav-link" href="#">Most popular</a>
+										<a class="books-nav-link" href="#">Free Books</a>
 									</div>
-									<input class="booksSearchBar" placeholder="Enter Keywords"></input>
+									<form class="books-search-bar">
+										<input type="text" class="search-bar-input" placeholder="Enter Keywords"></input>
+										<button class="search-bar-button"></span></button>
+									</form>
 								</div>
 						</div>
-						<div class="booksList"></div>
+						<div class="books-list"></div>
 					</section>
 			</main>
 			<footer>
-          <div class="question">
-						<img src="./assets/img/icons/question_mark.png" class="question-image"></img>
+				<div class="footer-nav">
+					<div class="question">
+						<div class="question-icon"></div>
 					</div>
           <div class="cogwheel">
-            <img src="./assets/img/icons/cogwheel.png" class="cogwheel-image"></img>
-        </div>
+						<div class="cogwheel-icon"></div>
+        	</div>
+				</div>
       </footer>
 		</div>
 		<script src="script.js"></script>
