--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -11,11 +11,11 @@
 		<div class="page">
 			<header>
 				<div class="header-nav">
-					<p class="header-nav-help">Help Center</p>
-					<p class="header-nav-support">Our Support</p>
+					<a class="header-nav-help" href="#">Help Center</a>
+					<a class="header-nav-support" href="#">Our Support</a>
 					<div class="header-nav-user">
 						<img src="./assets/img/avatar/avatar.png" class="header-nav-user-photo"></img>
-						<div class="header-nav-user-name">Sergey Savelev</div>
+						<p class="header-nav-user-name">Sergey Savelev</p>
 					</div>
 				</div>
 			</header>
