--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -60,14 +60,14 @@
 								<p class="books-header-title">Browse Available Books</p>
 								<div class="books-nav">
 									<div class="books-nav-links">
-										<a class="books-nav-link" href="#">All Books</a>
-										<a class="books-nav-link" href="#">Most Recent</a>
-										<a class="books-nav-link" href="#">Most popular</a>
-										<a class="books-nav-link" href="#">Free Books</a>
+										<button class="books-nav-link">All Books</button>
+										<button class="books-nav-link">Most Recent</button>
+										<button class="books-nav-link">Most popular</button>
+										<button class="books-nav-link">Free Books</button>
 									</div>
 									<form class="books-search-bar">
 										<input type="text" class="search-bar-input" placeholder="Enter Keywords"></input>
-										<button class="search-bar-button"></span></button>
+										<button class="search-bar-button"></button>
 									</form>
 								</div>
 						</div>
