--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -12,6 +12,7 @@
 			<header>
 				<div class="header-nav">
 					<a class="header-nav-help" href="#">Help Center</a>
+					<div class="header-dot"></div>
 					<a class="header-nav-support" href="#">Our Support</a>
 					<div class="header-nav-user">
 						<img src="./assets/img/avatar/avatar.png" class="header-nav-user-photo"></img>
