--- a/src/ex11_js_dom/task-01.html
+++ b/src/ex11_js_dom/task-01.html
@@ -7,14 +7,16 @@
 		<link rel="stylesheet" href="task-01.css" />
 		<title>Document</title>
 	</head>
-	<main class="content">
-		<div class="window">
-			<div id="currentImage"></div>
-		</div>
-		<div class="buttons">
-			<button class="btn" id="prev">Previous</button>
-			<button class="btn" id="next">Next</button>
-		</div>
+	<body>
+		<main class="content">
+			<div class="window">
+				<div id="currentImage"></div>
+			</div>
+			<div class="buttons">
+				<button class="btn" id="prev">Previous</button>
+				<button class="btn" id="next">Next</button>
+			</div>
+		</main>
 		<script src="task-01.js"></script>
-	</main>
+	</body>
 </html>
