--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -12,6 +12,7 @@
 			<header>
 				<div class="header-nav">
 					<a class="header-nav-help" href="#">Help Center</a>
+					<div class="header-nav-dot"></div>
 					<a class="header-nav-support" href="#">Our Support</a>
 					<div class="header-nav-user">
 						<img src="./assets/img/avatar/avatar.png" class="header-nav-user-photo"></img>
@@ -42,14 +43,14 @@
 							<div class="added-section">
 								<div class="section-part">
 									<div class="added-icon"></div>
-									<p class="added-text">You added <span>Fight Club</span> by <span>Chuck Palaniuk</span> to your <span>Must Read Titles</span> </p>
+									<p class="added-text">You added <span>The Order of Time</span> by <span>Carlo Rovelli</span> to your <span>Must Read Titles</span> </p>
 								</div>
 								<p class="added-time">24 minutes ago</p>
 							</div>
 							<div class="added-section">
 								<div class="section-part">
 									<div class="added-icon"></div>
-									<p class="added-text">You added <span>The Trial</span> by <span>Franz Kafka</span> to your <span>Must Read Titles</span> </p>
+									<p class="added-text">You added <span>Silent Spring </span> by <span>Rachel Carson</span> to your <span>Must Read Titles</span> </p>
 								</div>
 								<p class="added-time">48 minutes ago</p>
 							</div>
