--- a/src/library_task/index.html
+++ b/src/library_task/index.html
@@ -23,7 +23,7 @@
 			<main class="content">
 					<aside>
 						<div class="add-book">
-							<button class="btn">ADD A BOOK</button>
+							<button class="btn" id="add-book-btn">ADD A BOOK</button>
 						</div>
 						<nav class="nav">
 								<a class="reading" href="#">Now Reading</a>
@@ -74,6 +74,28 @@
 						</div>
 						<div class="books-list">
 							<div id="book-cell"></div>
+						</div>
+					</section>
+					<section class="popup" id="popup">
+						<div class="popup-inner">
+							<form class="popup-form" action="">
+								<fieldset>
+									<legend>Add a book</legend>
+									<p>
+										<label for="get-title">Title:</label>
+										<input id="get-title" class="get-book-input" type="text" name="name">
+									</p>
+									<p>
+										<label for="get-author">Author:</label>
+										<input id="get-author" class="get-book-input" type="text" name="name">
+									</p>
+									<p>
+										<label for="get-file">File:</label>
+										<input id="get-file" class="get-book-input" type="file" name="name">
+									</p>
+									<input class="save-book-input" id="save-book-input" type="submit" value="Save">
+								</fieldset>
+							</form>
 						</div>
 					</section>
 			</main>
